# point-reg-ceres

./: CMakeLists.txt  README.md
data/: registration-data.json
docker/: Dockerfile.nvidia  build-docker.sh  run-docker.sh
src/: test-ceres.cpp
